--- a/lib/fonts.css
+++ b/lib/fonts.css
@@ -6,10 +6,10 @@
       <a href="http://www.onlinewebfonts.com">oNline Web Fonts</a>
 */
 @font-face {font-family: "Minercraftory";
-    src: url("https://db.onlinewebfonts.com/t/0b6ede94891dc967aff38e9ca2419bc6.eot"); /* IE9*/
-    src: url("https://db.onlinewebfonts.com/t/0b6ede94891dc967aff38e9ca2419bc6.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("https://db.onlinewebfonts.com/t/0b6ede94891dc967aff38e9ca2419bc6.woff2") format("woff2"), /* chrome firefox */
-    url("https://db.onlinewebfonts.com/t/0b6ede94891dc967aff38e9ca2419bc6.woff") format("woff"), /* chrome firefox */
-    url("https://db.onlinewebfonts.com/t/0b6ede94891dc967aff38e9ca2419bc6.ttf") format("truetype"), /* chrome firefox opera Safari, Android, iOS 4.2+*/
-    url("https://db.onlinewebfonts.com/t/0b6ede94891dc967aff38e9ca2419bc6.svg#Minercraftory") format("svg"); /* iOS 4.1- */
+    src: url("http://db.onlinewebfonts.com/t/0b6ede94891dc967aff38e9ca2419bc6.eot"); /* IE9*/
+    src: url("http://db.onlinewebfonts.com/t/0b6ede94891dc967aff38e9ca2419bc6.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("http://db.onlinewebfonts.com/t/0b6ede94891dc967aff38e9ca2419bc6.woff2") format("woff2"), /* chrome firefox */
+    url("http://db.onlinewebfonts.com/t/0b6ede94891dc967aff38e9ca2419bc6.woff") format("woff"), /* chrome firefox */
+    url("http://db.onlinewebfonts.com/t/0b6ede94891dc967aff38e9ca2419bc6.ttf") format("truetype"), /* chrome firefox opera Safari, Android, iOS 4.2+*/
+    url("http://db.onlinewebfonts.com/t/0b6ede94891dc967aff38e9ca2419bc6.svg#Minercraftory") format("svg"); /* iOS 4.1- */
 }
