--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 
 
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -845,7 +844,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------*/
 
 #clients {
-  padding: 30px 0;
+  padding: 20px 0;
   background: #fff;
   overflow: hidden;
 }
@@ -854,7 +853,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   max-width: 100%;
   opacity: 0.5;
   transition: 0.3s;
-  padding: 15px 0;
+  padding: 10px 0;
 }
 
 #clients img:hover {
@@ -1143,7 +1142,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 @media (pointer: coarse) and (hover: none) {
   header {
-    background: url('https://source.unsplash.com/XT5OInaElMw/1600x900') black no-repeat center center scroll;
+	background: linear-gradient(45deg, rgba(49, 129, 51, 0.6), rgba(115, 162, 213, 0.6)), url("../img/intro-bg.jpg") center top no-repeat;
   }
   header video {
     display: none;
